--- a/app/src/main/res/layout/activity_class_sort.xml
+++ b/app/src/main/res/layout/activity_class_sort.xml
@@ -33,10 +33,12 @@
         android:id="@+id/addCrs"
         android:layout_width="243dp"
         android:layout_height="57dp"
+        android:layout_marginTop="16dp"
         android:text="Add Course"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
 </android.support.constraint.ConstraintLayout>
