--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="165dp"
+        android:id="@+id/titleReminder"
+        android:layout_width="343dp"
         android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/colourLightBlue"
@@ -27,17 +27,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/addCrs"
-        android:layout_width="243dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="16dp"
-        android:text="Add Course"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </android.support.constraint.ConstraintLayout>
