notes work goodly

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/classSortID"
+    android:id="@+id/noteID"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -32,7 +32,7 @@
     <TextView
         android:id="@+id/titleNote"
         android:layout_width="338dp"
-        android:layout_height="40dp"
+        android:layout_height="49dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/colourLightBlue"
         android:textSize="36sp"
