--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -7,33 +7,12 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/reminderMessageInput"
-        android:layout_width="318dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="504dp"
-        android:ems="10"
-        android:hint="Reminder Message"
-        android:inputType="textPersonName|textMultiLine"
-        android:scrollHorizontally="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/titleReminder"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
         android:id="@+id/reminderTimeInput"
         android:layout_width="318dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="356dp"
@@ -45,7 +24,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reminderMessageInput" />
+        app:layout_constraintTop_toBottomOf="@+id/reminderInput" />
+
+    <EditText
+        android:id="@+id/reminderInput"
+        android:layout_width="318dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="488dp"
+        android:ems="10"
+        android:hint="Reminder Message"
+        android:inputType="textPersonName|textMultiLine"
+        android:scrollHorizontally="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -63,11 +62,14 @@
         android:layout_width="343dp"
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:textColor="@color/colourLightBlue"
         android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/setReminder"
